# Kirenenko

./: .gitmodules  Dockerfile  README.md
afl/: afl-fuzz.patch
llvm_mode/: CMakeLists.txt
llvm_mode/compiler/: CMakeLists.txt  ko_clang.c  tsym_clang.c
llvm_mode/dfsan_rt/: CMakeLists.txt
llvm_mode/dfsan_rt/dfsan/: CMakeLists.txt  dfsan.cc  dfsan.h  dfsan_custom.cc  dfsan_flags.inc  dfsan_interceptors.cc  dfsan_platform.h  done_abilist.txt  union_hashtable.cc  union_hashtable.h
llvm_mode/dfsan_rt/dfsan/scripts/: build-libc-list.py
llvm_mode/external_lib/: CMakeLists.txt
llvm_mode/libcxx/: CMakeLists.txt  compile.sh
llvm_mode/pass/: CMakeLists.txt  TaintPass.cc
tests/partial-concrete/: partial-concrete.c
